<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".running.RunningRecordActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_record"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:hint="@string/record_time_string"
                tools:text="22:33"
                android:inputType="time"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_record">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_String"
                android:inputType="date"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="#8049C3"
            android:text="@string/save_string"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear_records"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/clear_records_string"
            android:textColor="#8049C3"
            app:layout_constraintTop_toBottomOf="@id/button_save_records" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
